src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Clinic_Use__c</fullName>
        <label>Clinic Use</label>
        <summaryFilterItems>
            <field>Product_Sale__c.Type__c</field>
            <operation>equals</operation>
            <value>Clinic Use</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Sale__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Price__c</fullName>
        <label>Distributor Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <formula>Stocks__c - Clinic_Use__c  - Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold__c</fullName>
        <label>Sold</label>
        <summaryFilterItems>
            <field>Product_Sale__c.Type__c</field>
            <operation>equals</operation>
            <value>Sale</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Sale__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stocks__c</fullName>
        <label>Stocks</label>
        <summarizedField>Product_Delivery__c.Quantity__c</summarizedField>
        <summaryForeignKey>Product_Delivery__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Commission__c</columns>
        <columns>Distributor_Price__c</columns>
        <columns>Is_Set__c</columns>
        <columns>Name__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>Clinic_Use__c</columns>
        <columns>Sold__c</columns>
        <columns>Stocks__c</columns>
        <columns>Inventory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PROD-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>